iptables/rules.v4
# Generated by iptables-save v1.8.7 on Mon Dec 12 16:11:44 2022
*mangle
:PREROUTING ACCEPT [2803:308334]
:INPUT ACCEPT [2801:308000]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2416:370562]
:POSTROUTING ACCEPT [2416:370562]
COMMIT
# Completed on Mon Dec 12 16:11:44 2022
# Generated by iptables-save v1.8.7 on Mon Dec 12 16:11:44 2022
*raw
:PREROUTING ACCEPT [2803:308334]
:OUTPUT ACCEPT [2416:370562]
COMMIT
# Completed on Mon Dec 12 16:11:44 2022
# Generated by iptables-save v1.8.7 on Mon Dec 12 16:11:44 2022
*filter
:INPUT ACCEPT [66:20268]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2408:370082]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT
-A INPUT -s 193.191.177.6/32 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
COMMIT
# Completed on Mon Dec 12 16:11:44 2022
# Generated by iptables-save v1.8.7 on Mon Dec 12 16:11:44 2022
*nat
:PREROUTING ACCEPT [212:26903]
:INPUT ACCEPT [176:18381]
:OUTPUT ACCEPT [255:19843]
:POSTROUTING ACCEPT [255:19843]
COMMIT
# Completed on Mon Dec 12 16:11:44 2022
